[package]
edition = "2024"
name = "solana-demo"
version = "0.1.0"

[dependencies]
anyhow = "1.0.62"
backoff = "0.4.0"
bincode = "2.0.1"
bs58 = "0.5.1"
chrono = "0.4.26"
env_logger = "0.11.8"
futures = "0.3.24"
hex = "0.4.3"
indicatif = "0.17.9"
log = "0.4.17"
maplit = "1.0.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.86"
solana-sdk = "~2.2.1"
solana-transaction-status = "~2.2.1"
tokio = {version = "1", features = ["full"]}
# tonic = "0.13.0"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = {version = "6.0.0", features = ["plugin"]}
# grpc编码器
# prost = "0.13.5"
# 环境变量
dotenvy = "0.15.7"
spl-token = "8.0.0"
# 仅构建时需要
[build-dependencies]
# tonic-build = "0.13.0"
